commit for account changes

--- a/MitosisTimesheet/src/main/webapp/css/style.css
+++ b/MitosisTimesheet/src/main/webapp/css/style.css
@@ -251,8 +251,12 @@ width:30%;
  .profile-value{
  	 padding-top: 7px;		
  }
+ 
  .btn-profile-edit{
  	
+ }
+ .btn-profile-cancel{
+ 	display: none;	
  }
  a .glyphicon{
  	padding-left: 10px;
