commit for indivitual report

--- a/MitosisTimesheet/src/main/webapp/css/style.css
+++ b/MitosisTimesheet/src/main/webapp/css/style.css
@@ -77,6 +77,9 @@ border: none;
 .navbar-nav {
 margin: 2px 40px;
 }
+.dropdown-menu>li>a{color: white;}
+.navbar-nav>li>.dropdown-menu>li>a:hover{color: grey;}
+.navbar-nav>li>.dropdown-menu{background: grey;}
 .pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover,
 	.pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover
 	{
