--- a/MitosisTimesheet/src/main/webapp/reports/individualDetailReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/individualDetailReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report3" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="156"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fromDate" class="java.util.Date"/>
 	<parameter name="ToDate" class="java.util.Date"/>
@@ -14,38 +14,35 @@
 	<title>
 		<band height="96" splitType="Stretch">
 			<staticText>
-				<reportElement x="212" y="12" width="93" height="19"/>
-				<textElement/>
-				<text><![CDATA[Mitosis Timesheet]]></text>
+				<reportElement x="181" y="6" width="237" height="19"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[Mitosis Timesheet - Individual Detail Report]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="242" y="44" width="136" height="15"/>
-				<textElement/>
-				<text><![CDATA[ - Timesheet Detail Report]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="159" y="75" width="32" height="20"/>
+				<reportElement x="153" y="75" width="32" height="20"/>
 				<textElement/>
 				<text><![CDATA[From:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="279" y="75" width="18" height="20"/>
+				<reportElement x="315" y="74" width="18" height="20"/>
 				<textElement/>
 				<text><![CDATA[To: ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="191" y="75" width="85" height="20"/>
+				<reportElement x="185" y="75" width="85" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.util.Date"><![CDATA[$P{fromDate}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement x="297" y="75" width="100" height="20"/>
+				<reportElement x="332" y="74" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.util.Date"><![CDATA[$P{ToDate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="188" y="44" width="54" height="15"/>
-				<textElement/>
+				<reportElement x="213" y="39" width="156" height="15"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{name}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -108,7 +105,7 @@
 				<reportElement x="97" y="0" width="1" height="37"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="119" y="3" width="65" height="20"/>
+				<reportElement x="116" y="3" width="65" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{hours}]]></textFieldExpression>
 			</textField>
@@ -135,7 +132,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{issueNumber}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="442" y="4" width="100" height="20"/>
+				<reportElement x="425" y="4" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{description}]]></textFieldExpression>
 			</textField>
