--- a/MitosisTimesheet/src/main/webapp/reports/individualDetailReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/individualDetailReport.jrxml
@@ -3,8 +3,8 @@
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="fromDate" class="java.util.Date"/>
-	<parameter name="ToDate" class="java.util.Date"/>
+	<parameter name="fromDate" class="java.lang.String"/>
+	<parameter name="toDate" class="java.lang.String"/>
 	<parameter name="name" class="java.lang.String"/>
 	<field name="date" class="java.util.Date"/>
 	<field name="hours" class="java.lang.Double"/>
@@ -31,12 +31,12 @@
 			<textField>
 				<reportElement x="185" y="75" width="85" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.util.Date"><![CDATA[$P{fromDate}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{fromDate}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
 				<reportElement x="332" y="74" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.util.Date"><![CDATA[$P{ToDate}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{toDate}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="213" y="39" width="156" height="15"/>
@@ -50,7 +50,7 @@
 	<columnHeader>
 		<band height="36" splitType="Stretch">
 			<rectangle>
-				<reportElement x="1" y="10" width="554" height="26" backcolor="#F3E822"/>
+				<reportElement x="1" y="10" width="554" height="26"/>
 			</rectangle>
 			<line>
 				<reportElement x="310" y="11" width="1" height="25"/>
