--- a/MitosisTimesheet/src/main/webapp/reports/individualSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/individualSummaryReport.jrxml
@@ -4,8 +4,8 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="name" class="java.lang.String"/>
-	<parameter name="fromDate" class="java.util.Date"/>
-	<parameter name="ToDate" class="java.util.Date"/>
+	<parameter name="fromDate" class="java.lang.String"/>
+	<parameter name="toDate" class="java.lang.String"/>
 	<parameter name="totalhours" class="java.lang.Double"/>
 	<field name="date" class="java.util.Date"/>
 	<field name="project.projectName" class="java.lang.String"/>
@@ -33,17 +33,17 @@
 			<textField>
 				<reportElement x="193" y="75" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.util.Date"><![CDATA[$P{fromDate}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{fromDate}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="337" y="74" width="32" height="21"/>
+				<reportElement x="337" y="74" width="17" height="21"/>
 				<textElement/>
 				<text><![CDATA[To:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="370" y="75" width="100" height="20"/>
+				<reportElement x="354" y="74" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.util.Date"><![CDATA[$P{ToDate}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{toDate}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
@@ -86,10 +86,10 @@
 			<line>
 				<reportElement x="337" y="-4" width="1" height="30"/>
 			</line>
-			<textField>
+			<textField pattern="dd/MM/yyyy">
 				<reportElement x="18" y="4" width="100" height="20"/>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.util.Date"><![CDATA[$F{date}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{date})]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="163" y="5" width="142" height="20"/>
@@ -110,12 +110,12 @@
 		<band height="51" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="44" splitType="Stretch">
+		<band height="41" splitType="Stretch">
 			<rectangle>
-				<reportElement x="141" y="11" width="397" height="33"/>
+				<reportElement x="142" y="6" width="397" height="33"/>
 			</rectangle>
 			<line>
-				<reportElement x="338" y="11" width="1" height="33"/>
+				<reportElement x="338" y="6" width="1" height="33"/>
 			</line>
 			<staticText>
 				<reportElement x="193" y="18" width="100" height="20"/>
