commit for style changes

--- a/MitosisTimesheet/src/main/webapp/css/style.css
+++ b/MitosisTimesheet/src/main/webapp/css/style.css
@@ -154,6 +154,16 @@ margin: 2px 40px;
 white-space: nowrap;
 }
 
+.table th {
+	text-align: center;
+}
+
+.table tbody td {
+	text-align: center;
+	 white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .row-date{
 width:10%;	
 }
@@ -303,12 +313,17 @@ h2 {
 	.btn-formproject{
 			float: right;
 	}
-	
+	/* .form-ts .form-control{
+			width: 150px;
+	} */
 	.form-inline .date{
 			width: 115px; 
 	}
 	.form-inline .hour{
 			width: 115px; 
+	}
+	.form-inline .projectdet-form{
+			width: 312px;
 	}
 	
 	}
@@ -551,6 +566,17 @@ h2 {
 	}	
 	
 }
+@media ( min-width : 1040px) {
+	.btn-formproject{
+			float: right;
+	}
+	.form-ts .form-control{
+			width: 140px;
+	}
+	.form-ts .form-controls{
+			width: 200px;
+	}
+	}
 
 @media ( min-width : 800px) {	
 	.project-form .form-group .form-control{
