--- a/MitosisTimesheet/src/main/webapp/reports/teamDetailReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamDetailReport.jrxml
@@ -6,13 +6,12 @@
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
 	<parameter name="name" class="java.lang.String"/>
-	<parameter name="parameter1" class="java.lang.String"/>
 	<field name="date" class="java.util.Date"/>
 	<field name="hours" class="java.lang.Double"/>
 	<field name="issueNumber" class="java.lang.String"/>
 	<field name="description" class="java.lang.String"/>
 	<field name="project.projectName" class="java.lang.String"/>
-	<field name="name" class="java.lang.String"/>
+	<field name="userDetails.name" class="java.lang.String"/>
 	<title>
 		<band height="97" splitType="Stretch">
 			<staticText>
@@ -26,7 +25,7 @@
 				<text><![CDATA[From:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="315" y="74" width="18" height="20"/>
+				<reportElement x="329" y="74" width="18" height="20"/>
 				<textElement/>
 				<text><![CDATA[To: ]]></text>
 			</staticText>
@@ -36,17 +35,27 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{fromDate}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement x="332" y="74" width="100" height="20"/>
+				<reportElement x="352" y="74" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{toDate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="213" y="39" width="156" height="15"/>
+				<reportElement x="118" y="39" width="156" height="15"/>
 				<textElement textAlignment="Center">
 					<font size="10"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{name}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="283" y="39" width="162" height="16"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="273" y="39" width="10" height="15"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[-]]></text>
+			</staticText>
 		</band>
 	</title>
 	<columnHeader>
@@ -55,49 +64,41 @@
 				<reportElement x="1" y="10" width="554" height="26"/>
 			</rectangle>
 			<line>
-				<reportElement x="310" y="11" width="1" height="25"/>
+				<reportElement x="172" y="10" width="1" height="26"/>
 			</line>
 			<line>
-				<reportElement x="142" y="10" width="1" height="26"/>
-			</line>
-			<line>
-				<reportElement x="211" y="10" width="1" height="26"/>
+				<reportElement x="271" y="10" width="1" height="26"/>
 			</line>
 			<textField>
-				<reportElement x="7" y="17" width="50" height="14"/>
+				<reportElement x="7" y="17" width="37" height="14"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Date"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="156" y="15" width="43" height="16"/>
+				<reportElement x="192" y="15" width="43" height="16"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Hours"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="322" y="16" width="92" height="18"/>
+				<reportElement x="291" y="16" width="87" height="18"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Issue Number"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="442" y="14" width="92" height="18"/>
-				<textElement/>
+				<reportElement x="408" y="14" width="110" height="18"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Description"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="417" y="11" width="1" height="25"/>
+				<reportElement x="389" y="11" width="1" height="25"/>
 			</line>
-			<textField>
-				<reportElement x="222" y="16" width="81" height="16"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Project Name"]]></textFieldExpression>
-			</textField>
 			<line>
-				<reportElement x="68" y="11" width="1" height="25"/>
+				<reportElement x="49" y="11" width="1" height="25"/>
 			</line>
 			<staticText>
 				<reportElement x="83" y="17" width="46" height="15"/>
 				<textElement/>
-				<text><![CDATA["Name"]]></text>
+				<text><![CDATA[Name]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -107,52 +108,53 @@
 				<reportElement x="1" y="0" width="554" height="37"/>
 			</rectangle>
 			<textField isBlankWhenNull="true">
-				<reportElement x="6" y="4" width="50" height="20"/>
-				<textElement/>
+				<reportElement x="6" y="4" width="38" height="20"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.util.Date"><![CDATA[$F{date}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="142" y="0" width="1" height="37"/>
+				<reportElement x="172" y="0" width="1" height="37"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="145" y="3" width="65" height="20"/>
-				<textElement/>
+				<reportElement x="182" y="3" width="60" height="20"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{hours}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="211" y="0" width="1" height="37"/>
+				<reportElement x="271" y="1" width="1" height="37"/>
 			</line>
 			<line>
-				<reportElement x="310" y="0" width="1" height="37"/>
+				<reportElement x="389" y="0" width="1" height="37"/>
 			</line>
-			<line>
-				<reportElement x="417" y="0" width="1" height="37"/>
-			</line>
-			<textField>
-				<reportElement x="222" y="4" width="83" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
-			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="317" y="3" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="276" y="3" width="102" height="20"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{issueNumber}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="425" y="4" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="390" y="1" width="165" height="36"/>
+				<textElement textAlignment="Left"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{description}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="68" y="0" width="1" height="37"/>
+				<reportElement x="49" y="0" width="1" height="37"/>
 			</line>
-			<textField>
-				<reportElement x="76" y="4" width="60" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{name}]]></textFieldExpression>
+			<textField isBlankWhenNull="true">
+				<reportElement x="49" y="4" width="123" height="20" isPrintWhenDetailOverflows="true"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{userDetails.name}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="50">
+			<textField>
+				<reportElement x="445" y="22" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
+	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
 	</summary>
