--- a/MitosisTimesheet/src/main/webapp/reports/individualSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/individualSummaryReport.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="20"/>
 	<parameter name="name" class="java.lang.String"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
@@ -21,7 +21,7 @@
 				<text><![CDATA[Mitosis Timesheet - Individual Summary Report]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="244" y="43" width="100" height="20"/>
+				<reportElement x="193" y="43" width="202" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{name}]]></textFieldExpression>
 			</textField>
@@ -58,20 +58,20 @@
 				<text><![CDATA[Date]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="161" y="17" width="116" height="13"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[Project Name]]></text>
-			</staticText>
-			<line>
-				<reportElement x="337" y="0" width="1" height="32"/>
-			</line>
-			<staticText>
 				<reportElement x="369" y="17" width="116" height="13"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Hours]]></text>
 			</staticText>
 			<line>
-				<reportElement x="141" y="0" width="1" height="32"/>
+				<reportElement x="155" y="0" width="1" height="32"/>
+			</line>
+			<staticText>
+				<reportElement x="160" y="7" width="179" height="20"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[Project]]></text>
+			</staticText>
+			<line>
+				<reportElement x="354" y="0" width="1" height="33"/>
 			</line>
 		</band>
 	</columnHeader>
@@ -81,49 +81,55 @@
 				<reportElement x="16" y="0" width="522" height="27"/>
 			</rectangle>
 			<line>
-				<reportElement x="141" y="0" width="1" height="26"/>
-			</line>
-			<line>
-				<reportElement x="337" y="-4" width="1" height="30"/>
+				<reportElement x="155" y="0" width="1" height="26"/>
 			</line>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="18" y="4" width="100" height="20"/>
+				<reportElement x="18" y="4" width="124" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{date})]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="163" y="5" width="142" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="369" y="6" width="120" height="18"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{hours}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="173" y="5" width="164" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="354" y="0" width="1" height="27"/>
+			</line>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="34" splitType="Stretch"/>
+		<band height="31" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="51" splitType="Stretch"/>
+		<band height="51" splitType="Stretch">
+			<textField>
+				<reportElement x="440" y="13" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageFooter>
 	<summary>
 		<band height="41" splitType="Stretch">
 			<rectangle>
-				<reportElement x="142" y="6" width="397" height="33"/>
+				<reportElement x="156" y="6" width="384" height="33"/>
 			</rectangle>
 			<line>
-				<reportElement x="338" y="6" width="1" height="33"/>
+				<reportElement x="356" y="6" width="1" height="33"/>
 			</line>
 			<staticText>
-				<reportElement x="193" y="18" width="100" height="20"/>
+				<reportElement x="205" y="16" width="100" height="20"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Total Hours]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="370" y="19" width="119" height="20"/>
+			<textField isBlankWhenNull="true">
+				<reportElement x="375" y="15" width="119" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$P{totalhours}]]></textFieldExpression>
 			</textField>
