--- a/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
@@ -8,15 +8,9 @@
 	<parameter name="toDate" class="java.lang.String"/>
 	<parameter name="totalhours" class="java.lang.Double"/>
 	<field name="date" class="java.util.Date"/>
-	<field name="project.projectName" class="java.lang.String"/>
 	<field name="hours" class="java.lang.Double"/>
-	<field name="name" class="java.lang.String"/>
-	<variable name="field1_1" class="java.lang.Integer" resetType="Column" calculation="Count">
-		<variableExpression><![CDATA[$F{field1}]]></variableExpression>
-	</variable>
-	<variable name="field1_2" class="java.lang.Integer" resetType="Column" calculation="Count">
-		<variableExpression><![CDATA[$F{field1}]]></variableExpression>
-	</variable>
+	<field name="userDetails.name" class="java.lang.String"/>
+	<field name="project.projectName" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -28,36 +22,46 @@
 				<text><![CDATA[Mitosis Timesheet - Team Summary Report]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="244" y="43" width="100" height="20"/>
+				<reportElement x="159" y="43" width="151" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{name}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="161" y="74" width="32" height="21"/>
+				<reportElement x="160" y="74" width="32" height="21"/>
 				<textElement/>
 				<text><![CDATA[From:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="193" y="75" width="100" height="20"/>
+				<reportElement x="192" y="75" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{fromDate}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="337" y="74" width="17" height="21"/>
+				<reportElement x="381" y="74" width="17" height="21"/>
 				<textElement/>
 				<text><![CDATA[To:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="354" y="74" width="100" height="20"/>
+				<reportElement x="398" y="74" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{toDate}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="310" y="43" width="27" height="20"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[-]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="338" y="44" width="167" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="33" splitType="Stretch">
 			<rectangle>
-				<reportElement x="16" y="0" width="522" height="32"/>
+				<reportElement x="15" y="0" width="522" height="32"/>
 			</rectangle>
 			<staticText>
 				<reportElement x="44" y="9" width="55" height="18"/>
@@ -65,92 +69,82 @@
 				<text><![CDATA[Date]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="244" y="9" width="125" height="21"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[Project Name]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="409" y="9" width="114" height="21"/>
+				<reportElement x="386" y="9" width="114" height="21"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Hours]]></text>
 			</staticText>
 			<line>
-				<reportElement x="234" y="-1" width="1" height="32"/>
-			</line>
-			<line>
-				<reportElement x="391" y="0" width="1" height="32"/>
+				<reportElement x="310" y="0" width="1" height="32"/>
 			</line>
 			<line>
 				<reportElement x="131" y="-1" width="1" height="33"/>
 			</line>
 			<staticText>
-				<reportElement x="142" y="9" width="73" height="20"/>
+				<reportElement x="181" y="9" width="73" height="20"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[name]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="27" splitType="Stretch">
+		<band height="28" splitType="Stretch">
 			<rectangle>
-				<reportElement x="16" y="0" width="522" height="27"/>
+				<reportElement x="15" y="0" width="522" height="27"/>
 			</rectangle>
 			<line>
-				<reportElement x="234" y="0" width="1" height="26"/>
-			</line>
-			<line>
-				<reportElement x="391" y="0" width="1" height="26"/>
+				<reportElement x="310" y="0" width="1" height="26"/>
 			</line>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="18" y="4" width="100" height="20"/>
+				<reportElement x="22" y="4" width="100" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{date})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="238" y="5" width="142" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="409" y="6" width="120" height="18"/>
+				<reportElement x="354" y="6" width="175" height="18"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{hours}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="131" y="0" width="1" height="27"/>
 			</line>
-			<textField>
-				<reportElement x="142" y="7" width="81" height="17"/>
+			<textField isBlankWhenNull="true">
+				<reportElement x="142" y="7" width="151" height="17"/>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{name}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{userDetails.name}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="36" splitType="Stretch">
+		<band height="35" splitType="Stretch">
 			<line>
 				<reportElement x="131" y="-60" width="1" height="32"/>
 			</line>
 		</band>
 	</columnFooter>
 	<pageFooter>
-		<band height="51" splitType="Stretch"/>
+		<band height="51" splitType="Stretch">
+			<textField>
+				<reportElement x="439" y="14" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageFooter>
 	<summary>
-		<band height="41" splitType="Stretch">
+		<band height="40" splitType="Stretch">
 			<rectangle>
-				<reportElement x="142" y="6" width="397" height="33"/>
+				<reportElement x="132" y="6" width="407" height="33"/>
 			</rectangle>
 			<line>
-				<reportElement x="338" y="6" width="1" height="33"/>
+				<reportElement x="313" y="6" width="1" height="33"/>
 			</line>
 			<staticText>
-				<reportElement x="193" y="18" width="100" height="20"/>
+				<reportElement x="174" y="14" width="92" height="20"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Total Hours]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="370" y="19" width="119" height="20"/>
+				<reportElement x="386" y="14" width="145" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$P{totalhours}]]></textFieldExpression>
 			</textField>
