--- a/MitosisTimesheet/src/main/webapp/reports/individualSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/individualSummaryReport.jrxml
@@ -10,6 +10,7 @@
 	<field name="date" class="java.util.Date"/>
 	<field name="project.projectName" class="java.lang.String"/>
 	<field name="hours" class="java.lang.Double"/>
+	<field name="sum(hours)" class="java.lang.Double"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -91,7 +92,7 @@
 			<textField>
 				<reportElement x="369" y="6" width="120" height="18"/>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.lang.Double"><![CDATA[$F{hours}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$F{sum(hours)}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="173" y="5" width="164" height="20"/>
