--- a/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="993" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="40"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="name" class="java.lang.String"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
@@ -11,9 +11,7 @@
 	<field name="hours" class="java.lang.Double"/>
 	<field name="userDetails.name" class="java.lang.String"/>
 	<field name="project.projectName" class="java.lang.String"/>
-	<background>
-		<band splitType="Stretch"/>
-	</background>
+	<sortField name="date" order="Ascending"/>
 	<title>
 		<band height="113" splitType="Stretch">
 			<staticText>
@@ -114,13 +112,6 @@
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="35" splitType="Stretch">
-			<line>
-				<reportElement x="131" y="-60" width="1" height="32"/>
-			</line>
-		</band>
-	</columnFooter>
 	<pageFooter>
 		<band height="51" splitType="Stretch">
 			<textField>
@@ -133,10 +124,10 @@
 	<summary>
 		<band height="40" splitType="Stretch">
 			<rectangle>
-				<reportElement x="132" y="6" width="407" height="33"/>
+				<reportElement x="131" y="6" width="406" height="33"/>
 			</rectangle>
 			<line>
-				<reportElement x="313" y="6" width="1" height="33"/>
+				<reportElement x="312" y="6" width="1" height="33"/>
 			</line>
 			<staticText>
 				<reportElement x="174" y="14" width="92" height="20"/>
