--- a/MitosisTimesheet/src/main/webapp/reports/teamDetailReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamDetailReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report3" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="39"/>
 	<property name="ireport.y" value="144"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
@@ -12,7 +12,7 @@
 	<field name="description" class="java.lang.String"/>
 	<field name="project.projectName" class="java.lang.String"/>
 	<field name="userDetails.name" class="java.lang.String"/>
-	<sortField name="date" order="Ascending"/>
+	<sortField name="date"/>
 	<title>
 		<band height="97" splitType="Stretch">
 			<staticText>
@@ -76,7 +76,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["Date"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="205" y="15" width="43" height="16"/>
+				<reportElement x="209" y="15" width="43" height="16"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Hours"]]></textFieldExpression>
 			</textField>
@@ -112,7 +112,7 @@
 				<reportElement x="183" y="0" width="1" height="37"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="193" y="3" width="60" height="20"/>
+				<reportElement x="190" y="3" width="66" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{hours}]]></textFieldExpression>
 			</textField>
@@ -123,7 +123,7 @@
 				<reportElement x="383" y="0" width="1" height="37"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="276" y="3" width="102" height="20"/>
+				<reportElement x="275" y="3" width="102" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{issueNumber}]]></textFieldExpression>
 			</textField>
@@ -133,7 +133,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{description}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="62" y="0" width="1" height="37"/>
+				<reportElement x="61" y="0" width="1" height="37"/>
 			</line>
 			<textField isBlankWhenNull="true">
 				<reportElement x="67" y="4" width="113" height="20" isPrintWhenDetailOverflows="true"/>
