--- a/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
@@ -14,6 +14,7 @@
 	<field name="hours" class="java.lang.Double"/>
 	<field name="userDetails.name" class="java.lang.String"/>
 	<field name="project.projectName" class="java.lang.String"/>
+	<sortField name="project.projectName"/>
 	<group name="projectname">
 		<groupExpression><![CDATA[$F{project.projectName}]]></groupExpression>
 		<groupHeader>
