--- a/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="555" pageHeight="953" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="3"/>
+	<property name="ireport.x" value="40"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="name" class="java.lang.String"/>
 	<parameter name="fromDate" class="java.lang.String"/>
@@ -50,7 +50,7 @@
 					<text><![CDATA[Name]]></text>
 				</staticText>
 				<line>
-					<reportElement x="131" y="37" width="1" height="33"/>
+					<reportElement x="131" y="38" width="1" height="32"/>
 				</line>
 				<staticText>
 					<reportElement x="42" y="46" width="55" height="18"/>
@@ -64,11 +64,22 @@
 		</groupHeader>
 		<groupFooter>
 			<band height="45" splitType="Stretch">
+				<rectangle>
+					<reportElement mode="Transparent" x="131" y="0" width="406" height="33"/>
+				</rectangle>
+				<line>
+					<reportElement x="310" y="0" width="1" height="33"/>
+				</line>
 				<textField>
-					<reportElement x="406" y="13" width="108" height="20"/>
-					<textElement/>
+					<reportElement x="387" y="9" width="108" height="20"/>
+					<textElement textAlignment="Center"/>
 					<textFieldExpression class="java.lang.Double"><![CDATA[$V{projecttotal}]]></textFieldExpression>
 				</textField>
+				<staticText>
+					<reportElement x="169" y="10" width="100" height="20"/>
+					<textElement textAlignment="Center"/>
+					<text><![CDATA[Project Total Hours]]></text>
+				</staticText>
 			</band>
 		</groupFooter>
 	</group>
@@ -108,7 +119,7 @@
 		<band height="5" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="28" splitType="Stretch">
+		<band height="27" splitType="Stretch">
 			<rectangle>
 				<reportElement x="15" y="0" width="522" height="27"/>
 			</rectangle>
@@ -158,8 +169,8 @@
 				<text><![CDATA[Total Hours]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="364" y="14" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="391" y="14" width="100" height="20"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$V{sumhours}]]></textFieldExpression>
 			</textField>
 		</band>
