--- a/MitosisTimesheet/src/main/webapp/reports/individualDetailReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/individualDetailReport.jrxml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report3" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.x" value="107"/>
+	<property name="ireport.y" value="192"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
 	<parameter name="name" class="java.lang.String"/>
-	<parameter name="totalhours" class="java.lang.Double"/>
 	<field name="date" class="java.util.Date"/>
 	<field name="hours" class="java.lang.Double"/>
 	<field name="issueNumber" class="java.lang.String"/>
 	<field name="description" class="java.lang.String"/>
 	<field name="project.projectName" class="java.lang.String"/>
+	<variable name="totalhours" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{hours}]]></variableExpression>
+	</variable>
 	<title>
 		<band height="96" splitType="Stretch">
 			<staticText>
@@ -142,8 +144,8 @@
 	<pageFooter>
 		<band height="50">
 			<textField>
-				<reportElement x="418" y="12" width="137" height="20"/>
-				<textElement/>
+				<reportElement x="197" y="15" width="120" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -164,17 +166,17 @@
 			<line>
 				<reportElement x="197" y="8" width="1" height="31"/>
 			</line>
-			<textField>
-				<reportElement x="123" y="13" width="65" height="19"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.Double"><![CDATA[$P{totalhours}]]></textFieldExpression>
-			</textField>
 			<line>
 				<reportElement x="310" y="8" width="1" height="31"/>
 			</line>
 			<line>
 				<reportElement x="417" y="8" width="1" height="31"/>
 			</line>
+			<textField>
+				<reportElement x="126" y="13" width="65" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$V{totalhours}]]></textFieldExpression>
+			</textField>
 		</band>
 	</summary>
 </jasperReport>
