--- a/MitosisTimesheet/src/main/webapp/reports/individualSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/individualSummaryReport.jrxml
@@ -2,14 +2,16 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="71"/>
+	<property name="ireport.y" value="66"/>
 	<parameter name="name" class="java.lang.String"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
-	<parameter name="totalhours" class="java.lang.Double"/>
 	<field name="date" class="java.util.Date"/>
 	<field name="project.projectName" class="java.lang.String"/>
 	<field name="hours" class="java.lang.Double"/>
+	<variable name="totalhours" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{hours}]]></variableExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -109,8 +111,8 @@
 	<pageFooter>
 		<band height="51" splitType="Stretch">
 			<textField>
-				<reportElement x="440" y="13" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="171" y="14" width="166" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -128,10 +130,10 @@
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Total Hours]]></text>
 			</staticText>
-			<textField isBlankWhenNull="true">
-				<reportElement x="369" y="15" width="116" height="20"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.lang.Double"><![CDATA[$P{totalhours}]]></textFieldExpression>
+			<textField>
+				<reportElement x="370" y="13" width="115" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$V{totalhours}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
