--- a/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="555" pageHeight="953" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="40"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="5"/>
 	<parameter name="name" class="java.lang.String"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
@@ -64,22 +64,22 @@
 		</groupHeader>
 		<groupFooter>
 			<band height="45" splitType="Stretch">
-				<rectangle>
-					<reportElement mode="Transparent" x="131" y="0" width="406" height="33"/>
-				</rectangle>
 				<line>
 					<reportElement x="310" y="0" width="1" height="33"/>
 				</line>
 				<textField>
-					<reportElement x="387" y="9" width="108" height="20"/>
+					<reportElement x="354" y="9" width="175" height="20"/>
 					<textElement textAlignment="Center"/>
-					<textFieldExpression class="java.lang.Double"><![CDATA[$V{projecttotal}]]></textFieldExpression>
+					<textFieldExpression class="java.lang.Double"><![CDATA[(Math.round($V{projecttotal}*100.0))/100.0]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement x="169" y="10" width="100" height="20"/>
 					<textElement textAlignment="Center"/>
 					<text><![CDATA[Project Total Hours]]></text>
 				</staticText>
+				<rectangle>
+					<reportElement mode="Transparent" x="131" y="0" width="406" height="33"/>
+				</rectangle>
 			</band>
 		</groupFooter>
 	</group>
@@ -149,8 +149,8 @@
 	<pageFooter>
 		<band height="51" splitType="Stretch">
 			<textField>
-				<reportElement x="439" y="14" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="141" y="12" width="151" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -169,9 +169,9 @@
 				<text><![CDATA[Total Hours]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="391" y="14" width="100" height="20"/>
+				<reportElement x="354" y="14" width="175" height="20"/>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.lang.Double"><![CDATA[$V{sumhours}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.Double"><![CDATA[(Math.round($V{sumhours}*100.0))/100.0]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
